<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_below="@+id/rootRL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Register"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:layout_marginTop="75dp"
                android:textColor="#ff000000" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneValue"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_phn_no"
        android:maxLength="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:nextFocusDown="@+id/nameValue"
        android:layout_weight="1" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="@+id/phoneValue"
        android:layout_height="50dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/nameValue"
        android:maxLength="30"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_name"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:nextFocusDown="@+id/emailValue"
        android:layout_weight="1" />

    <EditText
        android:layout_alignParentBottom="@+id/nameValue"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailValue"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_email"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:nextFocusDown="@+id/addressLine1"
        android:layout_weight="1" />

        <Button
        android:layout_alignParentBottom="@+id/cityValue"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Next"
        android:id="@+id/confirm"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:clickable="true" />
</LinearLayout>
</ScrollView>
    </LinearLayout>