<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootRL"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Register"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#ffabc1ff" />

        <EditText
        android:layout_alignParentBottom="@+id/emailValue"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:id="@+id/addressLine1"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_addr"
        android:maxLength="30"
        android:layout_marginTop="10dp"
        android:nextFocusDown="@+id/streetValue"
        android:layout_weight="1" />

    <EditText
        android:layout_alignParentBottom="@+id/addressLine1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:singleLine="true"
        android:id="@+id/streetValue"
        android:hint="@string/enter_addr1"
        android:maxLength="30"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:nextFocusDown="@+id/landmark"
        android:layout_weight="1" />
    <EditText
        android:layout_alignParentBottom="@+id/streetValue"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:singleLine="true"
        android:id="@+id/landmark"
        android:hint="@string/enter_landmark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:maxLength="30"
        android:layout_marginRight="25dp"
        android:layout_weight="1" />

    <EditText
        android:layout_alignParentBottom="@+id/landmark"
        android:text="Hyderabad"
        android:id="@+id/cityValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:singleLine="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:nextFocusDown="@+id/confirm"/>

    <Button
        android:layout_alignParentBottom="@+id/cityValue"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Confirm"
        android:id="@+id/confirm"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:clickable="true" />

</LinearLayout>
    </ScrollView>