<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bitefast.activities.AddAddress">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="Register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff000000" />

        <EditText
        android:id="@+id/addressLine1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="@+id/emailValue"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_addr"
        android:maxLength="30"
        android:nextFocusDown="@+id/streetValue"
        android:singleLine="true" />

    <EditText
        android:id="@+id/streetValue"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="@+id/addressLine1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_addr1"
        android:maxLength="30"
        android:nextFocusDown="@+id/landmark"
        android:singleLine="true" />
    <EditText
        android:id="@+id/landmark"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="@+id/streetValue"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_landmark"
        android:maxLength="30"
        android:singleLine="true" />

    <EditText
        android:id="@+id/cityValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="@+id/landmark"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:nextFocusDown="@+id/confirm"
        android:singleLine="true"
        android:text="Hyderabad"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="@+id/cityValue"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:clickable="true"
        android:text="Confirm" />
</LinearLayout>
</ScrollView>
    </RelativeLayout>